--- a/DMT_ExaminationSystem/ClientApp/src/components/Login.css
+++ b/DMT_ExaminationSystem/ClientApp/src/components/Login.css
@@ -42,18 +42,6 @@ a {
     background: rgba(40,57,101,.9);
 }
 
-    .login-html .sign-in-htm,
-    .login-html .sign-up-htm {
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        position: absolute;
-        transform: rotateY(180deg);
-        //backface-visibility: hidden;
-        transition: all .4s linear;
-    }
-
     .login-html .sign-in,
     .login-html .sign-up,
     .login-form .group .check {
@@ -66,14 +54,18 @@ a {
         text-transform: uppercase;
     }
 
-    .login-html .tab {
-        font-size: 22px;
-        margin-right: 15px;
-        padding-bottom: 5px;
-        margin: 0 15px 10px 0;
-        display: inline-block;
-        border-bottom: 2px solid transparent;
-    }
+.login-form .group label {
+    color: white;
+}
+
+.login-html .tab {
+    font-size: 22px;
+    margin-right: 15px;
+    padding-bottom: 5px;
+    margin: 0 15px 10px 0;
+    display: inline-block;
+    border-bottom: 2px solid transparent;
+}
 
     .login-html .sign-in:checked + .tab,
     .login-html .sign-up:checked + .tab {
@@ -85,7 +77,6 @@ a {
     min-height: 345px;
     position: relative;
     perspective: 1000px;
-    transform-style: preserve-3d;
 }
 
     .login-form .group {
@@ -137,43 +128,6 @@ a {
                 transition: all .2s ease-in-out 0s;
             }
 
-            .login-form .group label .icon:before {
-                left: 3px;
-                width: 5px;
-                bottom: 6px;
-                transform: scale(0) rotate(0);
-            }
-
-            .login-form .group label .icon:after {
-                top: 6px;
-                right: 0;
-                transform: scale(0) rotate(0);
-            }
-
-        .login-form .group .check:checked + label {
-            color: #fff;
-        }
-
-            .login-form .group .check:checked + label .icon {
-                background: #1161ee;
-            }
-
-                .login-form .group .check:checked + label .icon:before {
-                    transform: scale(1) rotate(45deg);
-                }
-
-                .login-form .group .check:checked + label .icon:after {
-                    transform: scale(1) rotate(-45deg);
-                }
-
-.login-html .sign-in:checked + .tab + .sign-up + .tab + .login-form .sign-in-htm {
-    transform: rotate(0);
-}
-
-.login-html .sign-up:checked + .tab + .login-form .sign-up-htm {
-    transform: rotate(0);
-}
-
 .hr {
     height: 2px;
     margin: 60px 0 50px 0;
@@ -182,4 +136,8 @@ a {
 
 .foot-lnk {
     text-align: center;
+}
+
+.foot-lnk a {
+    color: white;
 }
