--- a/DMT_ExaminationSystem/ClientApp/src/components/styles/NavMenu.css
+++ b/DMT_ExaminationSystem/ClientApp/src/components/styles/NavMenu.css
@@ -1,65 +1,27 @@
-﻿a.navbar-brand {
-  white-space: normal;
-  text-align: center;
-  word-break: break-all;
+﻿.navbar-light .navbar-nav .nav-link {
+    color: rgba(0, 0, 0, 0.55);
+}
+.hover-underline-animation {
+    display: inline-block;
+    position: relative;
 }
 
-html {
-  font-size: 14px;
-}
-@media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
-}
-
-.box-shadow {
-  box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
-}
-
-.menu-bar {
-    border-radius: 25px;
-    height: fit-content;
-    display: inline-flex;
-    background-color: rgba(0, 0, 0, .4);
-    -webkit-backdrop-filter: blur(10px);
-    backdrop-filter: blur(10px);
-    align-items: center;
-    padding: 0 10px;
-    margin: 50px 0 0 0;
-}
-
-    .menu-bar li {
-        list-style: none;
-        color: white;
-        font-family: sans-serif;
-        font-weight: bold;
-        padding: 12px 16px;
-        margin: 0 8px;
-        position: relative;
-        cursor: pointer;
-        white-space: nowrap;
+    .hover-underline-animation:after {
+        content: '';
+        position: absolute;
+        width: 100%;
+        transform: scaleX(0);
+        height: 2px;
+        bottom: 0;
+        left: 0;
+        background-color: black!important;
+        transform-origin: bottom right;
+        transition: transform 0.25s ease-out;
     }
 
-        .menu-bar li::before {
-            content: " ";
-            position: absolute;
-            top: 0;
-            left: 0;
-            height: 100%;
-            width: 100%;
-            z-index: -1;
-            transition: 0.2s;
-            border-radius: 25px;
-        }
+    .hover-underline-animation:hover:after {
+        transform: scaleX(1);
+        transform-origin: bottom left;
+    }
 
-        .menu-bar li:hover {
-            color: black;
-        }
-
-            .menu-bar li:hover::before {
-                background: linear-gradient(to bottom, #e8edec, #d2d1d3);
-                box-shadow: 0px 3px 20px 0px black;
-                transform: scale(1.2);
-            }
  
