--- a/DMT_ExaminationSystem/ClientApp/src/components/styles/Home.css
+++ b/DMT_ExaminationSystem/ClientApp/src/components/styles/Home.css
@@ -1,10 +1,8 @@
 ﻿.bg-image {
     background-image: url("Home.jpg") !important;
-    filter: blur(8px);
-   
+    backdrop-filter: blur(10px);
     height: 100vh;
     z-index: 0;
     background-position: center !important;
     background-repeat: no-repeat !important;
-    
 }
