--- a/DMT_ExaminationSystem/ClientApp/src/components/styles/Login.css
+++ b/DMT_ExaminationSystem/ClientApp/src/components/styles/Login.css
@@ -1,16 +1,12 @@
-﻿body {
-    margin: 0;
-    color: #6a6f8c;
-    background: #c8c8c8;
-    font: 600 16px/18px 'Open Sans',sans-serif;
-}
-
-*, :after, :before {
+﻿*,
+:after,
+:before {
     box-sizing: border-box
 }
 
-.clearfix:after, .clearfix:before {
-    content: '';
+.clearfix:after,
+.clearfix:before {
+    content: "";
     display: table
 }
 
@@ -28,32 +24,29 @@ a {
     width: 100%;
     margin: auto;
     max-width: 525px;
-    min-height: 670px;
     position: relative;
     background: url(https://raw.githubusercontent.com/khadkamhn/day-01-login-form/master/img/bg.jpg) no-repeat center;
-    box-shadow: 0 12px 15px 0 rgba(0,0,0,.24),0 17px 50px 0 rgba(0,0,0,.19);
-    top: -810px;
+    box-shadow: 0 12px 15px 0 rgb(0 0 0 / 24%), 0 17px 50px 0 rgb(0 0 0 / 19%);
 }
 
 .login-html {
     width: 100%;
     height: 100%;
-    position: absolute;
     padding: 90px 70px 50px 70px;
     background: rgb(20 19 19 / 87%);
 }
 
-    .login-html .sign-in,
-    .login-html .sign-up,
-    .login-form .group .check {
-        display: none;
-    }
+.login-html .sign-in,
+.login-html .sign-up,
+.login-form .group .check {
+    display: none;
+}
 
-    .login-html .tab,
-    .login-form .group .label,
-    .login-form .group .button {
-        text-transform: uppercase;
-    }
+.login-html .tab,
+.login-form .group .label,
+.login-form .group .button {
+    text-transform: uppercase;
+}
 
 .login-form .group label {
     color: white;
@@ -68,11 +61,11 @@ a {
     border-bottom: 2px solid transparent;
 }
 
-    .login-html .sign-in:checked + .tab,
-    .login-html .sign-up:checked + .tab {
-        color: #fff;
-        border-color: #1161ee;
-    }
+.login-html .sign-in:checked+.tab,
+.login-html .sign-up:checked+.tab {
+    color: #fff;
+    border-color: #1161ee;
+}
 
 .login-form {
     min-height: 345px;
@@ -80,59 +73,59 @@ a {
     perspective: 1000px;
 }
 
-    .login-form .group {
-        margin-bottom: 15px;
-    }
+.login-form .group {
+    margin-bottom: 15px;
+}
 
-        .login-form .group .label,
-        .login-form .group .input,
-        .login-form .group .button {
-            width: 100%;
-            color: #fff;
-            display: block;
-        }
+.login-form .group .label,
+.login-form .group .input,
+.login-form .group .button {
+    width: 100%;
+    color: #fff;
+    display: block;
+}
 
-        .login-form .group .input,
-        .login-form .group .button {
-            border: none;
-            padding: 15px 20px;
-            border-radius: 25px;
-            background: rgba(255,255,255,.1);
-        }
+.login-form .group .input,
+.login-form .group .button {
+    border: none;
+    padding: 15px 20px;
+    border-radius: 25px;
+    background: rgba(255, 255, 255, .1);
+}
 
 
-        .login-form .group .label {
-            color: #aaa;
-            font-size: 12px;
-        }
+.login-form .group .label {
+    color: #aaa;
+    font-size: 12px;
+}
 
-        .login-form .group .button {
-            background: #1161ee;
-        }
+.login-form .group .button {
+    background: #1161ee;
+}
 
-        .login-form .group label .icon {
-            width: 15px;
-            height: 15px;
-            border-radius: 2px;
-            position: relative;
-            display: inline-block;
-            background: rgba(255,255,255,.1);
-        }
+.login-form .group label .icon {
+    width: 15px;
+    height: 15px;
+    border-radius: 2px;
+    position: relative;
+    display: inline-block;
+    background: rgba(255, 255, 255, .1);
+}
 
-            .login-form .group label .icon:before,
-            .login-form .group label .icon:after {
-                content: '';
-                width: 10px;
-                height: 2px;
-                background: #fff;
-                position: absolute;
-                transition: all .2s ease-in-out 0s;
-            }
+.login-form .group label .icon:before,
+.login-form .group label .icon:after {
+    content: "";
+    width: 10px;
+    height: 2px;
+    background: #fff;
+    position: absolute;
+    transition: all .2s ease-in-out 0s;
+}
 
 .hr {
     height: 2px;
     margin: 60px 0 50px 0;
-    background: rgba(255,255,255,.2);
+    background: rgba(255, 255, 255, .2);
 }
 
 .foot-lnk {
