--- a/DMT_ExaminationSystem/ClientApp/src/components/styles/NavMenu.css
+++ b/DMT_ExaminationSystem/ClientApp/src/components/styles/NavMenu.css
@@ -7,7 +7,7 @@
 }
 
     .hover-underline-animation:after {
-        content: '';
+        content: "";
         position: absolute;
         width: 100%;
         transform: scaleX(0);
