--- a/DMT_ExaminationSystem/ClientApp/src/components/styles/Questions.css
+++ b/DMT_ExaminationSystem/ClientApp/src/components/styles/Questions.css
@@ -1,11 +1,11 @@
-﻿@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+﻿@import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
 
 .container {
     background-color: #555;
     color: #ddd;
     border-radius: 10px;
     padding: 20px;
-    font-family: 'Montserrat', sans-serif;
+    font-family: "Montserrat", sans-serif;
     max-width: 700px;
 }
 
